# study_cifar

./: .gitignore  README.md  main.py  pyproject.toml
fp/: full_pipeline1.ipynb
models/mlp/: mlp.ipynb
models/resnet/: model_resnet_plainnet20.pt  model_resnet_resnet20.pt  resnet18.ipynb  resnet20.ipynb  results_resnet_plainnet20.csv  results_resnet_resnet20.csv
