[project]
name = "study-cifar"
version = "0.1.0"
description = "building some neural networks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupyterlab-widgets>=3.0.15",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
]
